fix alignment of location detecting status

--- a/src/ordering/containers/Location/index.scss
+++ b/src/ordering/containers/Location/index.scss
@@ -11,6 +11,10 @@
     margin-top: 8px;
   }
 }
+.location-page__detected-position-status {
+  margin: 10px 0;
+  font-weight: bold;
+}
 .location-page__detected-position-icon {
   svg {
     fill: orange;
